cmake_minimum_required(VERSION 3.4)

project(APCpp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(WINDOWS_EXPORT_ALL_SYMBOLS ON)

set(BUILD_SHARED_LIBS OFF)
add_subdirectory(IXWebSocket)
include_directories(IXWebSocket)
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP jsoncpp)
if (NOT JSONCPP_FOUND)
    add_subdirectory(jsoncpp)
    set_property(TARGET jsoncpp_static PROPERTY POSITION_INDEPENDENT_CODE ON)
    include_directories(jsoncpp/include)
else()
include_directories(${JSONCPP_INCLUDE_DIRS})
endif(NOT JSONCPP_FOUND)

add_library(APCpp SHARED Archipelago.cpp Archipelago.h)
if (NOT JSONCPP_FOUND)
    target_link_libraries(APCpp jsoncpp_static ixwebsocket)
else()
    target_link_libraries(APCpp ${JSONCPP_LDFLAGS} ixwebsocket)
endif(NOT JSONCPP_FOUND)
